--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "c:\\Users\\bully\\Downloads\\python-3.9.0-embed-amd64\\python.exe"
+    "python.pythonPath": "c:\\Users\\bully\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
